# OMOP_MEDS

./: .gitignore  AGENTS.md  DEPENDENCY_UPGRADE_PLAN.md  LICENSE  README.md  data_exploration.ipynb  junit.xml  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  tests.yaml
src/ETL_MEDS/: __init__.py  __main__.py  commands.py  dataset.yaml  download.py  pre_MEDS.py  pre_meds.py
src/ETL_MEDS/configs/: main.yaml  pre_MEDS.yaml
src/OMOP_MEDS/: __init__.py  __main__.py  commands.py  dataset.yaml  linked_data.py  pre_meds.py  pre_meds_data_loader.py  pre_meds_utils.py  utils.py
src/OMOP_MEDS/configs/: ETL.yaml  OMOP.yaml  event_configs.yaml  main.yaml  pre_MEDS.yaml  pre_MEDS_minimal.yaml
tests/: e2e_demo_test.py  notes.py  test_build_note_event_datetime.py  test_build_preferred_event_datetime.py  test_dependency_upgrade_config.py  test_get_patient_link_join_on_visit.py  test_join_concept_batch_safety.py  test_linked_data.py  test_nlp_feature_extraction.py  test_sharded_table_data_loader.py
tests/demo_resources/: note.csv
